Melhorando o acompanhamento da indexação e criando campos separados para lastid e lastdate
